# rusty-repomix

./: Cargo.toml
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/config/: loader.rs  mod.rs  schema.rs
src/core/: mod.rs
src/core/file/: mod.rs  process.rs  process_constants.rs  read.rs  search.rs  search_constants.rs
src/mcp/: mod.rs
src/shared/: error.rs  logger.rs  mod.rs
tests/: cli_entrypoint.rs  cli_init.rs
