[package]
name = "rusty_repomix"
version = "0.1.0"
edition = "2021"
description = "High-performance native Rust rewrite of Repomix"
license = "MIT"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
indicatif = "0.18"
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
