[package]
name = "rusty_repomix"
version = "0.1.0"
edition = "2021"
description = "High-performance native Rust rewrite of Repomix"
license = "MIT"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0"
chardetng = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
content_inspector = "0.2"
encoding_rs = "0.8"
globset = "0.4"
ignore = "0.4"
indicatif = "0.18"
json5 = "0.4"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
